// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AdminSidebar Plugins should filter plugins 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter active"
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value="autolink"
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword="autolink"
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            definitionKey="plugins"
            icon={
              <PowerPlugOutlineIcon
                color="currentColor"
                size={16}
              />
            }
            key="plugins"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Plugins"
                id="admin.sidebar.plugins"
              />
            }
          >
            <AdminSidebarSection
              key="custompluginmattermost-autolink"
              name="plugins/plugin_mattermost-autolink"
              title="Autolink"
            />
          </AdminSidebarCategory>
        </ul>
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar Plugins should match snapshot 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            definitionKey="plugins"
            icon={
              <PowerPlugOutlineIcon
                color="currentColor"
                size={16}
              />
            }
            key="plugins"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Plugins"
                id="admin.sidebar.plugins"
              />
            }
          >
            <AdminSidebarSection
              key="custompluginmattermost-autolink"
              name="plugins/plugin_mattermost-autolink"
              title="Autolink"
            />
          </AdminSidebarCategory>
        </ul>
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            definitionKey="plugins"
            icon={
              <PowerPlugOutlineIcon
                color="currentColor"
                size={16}
              />
            }
            key="plugins"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Plugins"
                id="admin.sidebar.plugins"
              />
            }
          >
            <AdminSidebarSection
              key="custompluginplugin_0"
              name="plugins/plugin_plugin_0"
              title="Plugin 0"
            />
          </AdminSidebarCategory>
        </ul>
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot with workspace optimization dashboard enabled 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            definitionKey="plugins"
            icon={
              <PowerPlugOutlineIcon
                color="currentColor"
                size={16}
              />
            }
            key="plugins"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Plugins"
                id="admin.sidebar.plugins"
              />
            }
          >
            <AdminSidebarSection
              key="custompluginplugin_0"
              name="plugins/plugin_plugin_0"
              title="Plugin 0"
            />
          </AdminSidebarCategory>
        </ul>
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, no access 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        />
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, not prevent the console from loading when empty settings_schema provided 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            definitionKey="plugins"
            icon={
              <PowerPlugOutlineIcon
                color="currentColor"
                size={16}
              />
            }
            key="plugins"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Plugins"
                id="admin.sidebar.plugins"
              />
            }
          >
            <AdminSidebarSection
              key="custompluginplugin_0"
              name="plugins/plugin_plugin_0"
              title="Plugin 0"
            />
          </AdminSidebarCategory>
        </ul>
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, render plugins without any settings as well 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            definitionKey="plugins"
            icon={
              <PowerPlugOutlineIcon
                color="currentColor"
                size={16}
              />
            }
            key="plugins"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Plugins"
                id="admin.sidebar.plugins"
              />
            }
          >
            <AdminSidebarSection
              key="custompluginplugin_0"
              name="plugins/plugin_plugin_0"
              title="Plugin 0"
            />
          </AdminSidebarCategory>
        </ul>
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, with license (with all feature) 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            definitionKey="plugins"
            icon={
              <PowerPlugOutlineIcon
                color="currentColor"
                size={16}
              />
            }
            key="plugins"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Plugins"
                id="admin.sidebar.plugins"
              />
            }
          >
            <AdminSidebarSection
              key="custompluginplugin_0"
              name="plugins/plugin_plugin_0"
              title="Plugin 0"
            />
          </AdminSidebarCategory>
        </ul>
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;

exports[`components/AdminSidebar should match snapshot, with license (without any explicit feature) 1`] = `
<div
  className="admin-sidebar"
>
  <Connect(Component) />
  <div
    className="filter-container"
  >
    <SearchIcon
      aria-hidden="true"
      className="search__icon"
    />
    <QuickInput
      className="filter "
      clearable={true}
      id="adminSidebarFilter"
      onChange={[Function]}
      onClear={[Function]}
      placeholder="Find settings"
      type="text"
      value=""
    />
  </div>
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={true}
    autoHideDuration={500}
    autoHideTimeout={500}
    hideTracksWhenNotNeeded={false}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      className="nav-pills__container"
    >
      <SearchKeywordMarking
        keyword=""
      >
        <ul
          className="nav nav-pills nav-stacked"
        >
          <AdminSidebarCategory
            definitionKey="plugins"
            icon={
              <PowerPlugOutlineIcon
                color="currentColor"
                size={16}
              />
            }
            key="plugins"
            parentLink="/admin_console"
            sectionClass=""
            title={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Plugins"
                id="admin.sidebar.plugins"
              />
            }
          >
            <AdminSidebarSection
              key="custompluginplugin_0"
              name="plugins/plugin_plugin_0"
              title="Plugin 0"
            />
          </AdminSidebarCategory>
        </ul>
      </SearchKeywordMarking>
    </div>
  </Scrollbars>
</div>
`;
